--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@callstack/react-theme-provider": "^2.1.0",
+    "@gorhom/bottom-sheet": "^2.2.6",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.0.0",
+    "react-native-paper": "^4.7.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
-    "react-native-size-matters": "^0.4.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.3",
+    "@types/react-native": "^0.64.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
