--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
+    "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.0",
