--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-animatable": "^1.3.3",
+    "react-native-date-picker": "^3.2.10",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.7.1",
